--- a/lecture-viewer/package.json
+++ b/lecture-viewer/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.10.1",
+    "@codemirror/lang-cpp": "^6.0.3",
+    "@codemirror/language": "^6.12.1",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.39.11",
+    "codemirror": "^6.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
